force-app/main/default/objects/Entertainment__c/Entertainment__c.object-meta.xml
<CustomObject>
    <label>Entertainment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Entertainment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entertainments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>