force-app/main/default/objects/Entertainment__c/fields/Client_Representative_s__c.field-meta.xml
<CustomField>
    <fullName>Client_Representative_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Representative(s)</label>
    <type>TextArea</type>
</CustomField>