force-app/main/default/objects/Entertainment__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD</label>
    <referenceTo>EBD__c</referenceTo>
    <relationshipLabel>Entertainments</relationshipLabel>
    <relationshipName>Entertainments</relationshipName>
    <type>Lookup</type>
</CustomField>