force-app/main/default/objects/Entertainment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>