force-app/main/default/objects/Entertainment__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Timing</label>
    <type>TextArea</type>
</CustomField>