force-app/main/default/objects/Entertainment__c/fields/UHG_Representative_s__c.field-meta.xml
<CustomField>
    <fullName>UHG_Representative_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHG Representative(s</label>
    <type>TextArea</type>
</CustomField>